[package]
name = "spirit_sub"
version = "0.1.0"
authors = ["Luni-4 <luni-4@hotmail.it>"]
edition = "2018"

[dependencies]
iced = "0.3.0"
iced_graphics = "0.2.0"
iced_native = "0.4.0"
iced_wgpu = "0.4.0"
iced_aw = { path = "../iced_aw", default-features = false, features = ["number_input"] }

thiserror = "1.0"

libass = { path = "../libass-rs/libass" }
png = "0.16.7"

[profile.release]
opt-level = 3
debug = false
lto = true
